feat: 26.2-neoforge